--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 .notification.is-primary {
   width: 100%;
   text-align: center;
+  background-color: #1d97e8;
 }
 
 .title.is-2 {
@@ -42,4 +43,8 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 5%;
+}
+
+.button.is-primary {
+  background-color: #1d97e8;
 }
